fixed issue with positioning on mobile

--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -10,6 +10,10 @@ html {
   background-size: cover;
 }
 
+.logo {
+  width: 520px;
+}
+
 h1 {
   font-size: 18px;
   font-family: 'Montserrat', sans-serif;
@@ -47,24 +51,6 @@ a {
   color: white;
 }
 
-.logo {
-  width: 520px;
-}
-
-.card {
-  margin: auto;
-  margin-top: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.card-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .arrows {
   margin: auto;
   margin-top: 20px;
@@ -72,7 +58,6 @@ a {
   align-items: center;
   justify-content: center;
 }
-
 
 /* Matches Page */
 
@@ -140,6 +125,15 @@ a {
   width: 90vw;
   max-width: 260px;
   height: 300px;
+  display: block;
+}
+
+.card-img {
+  display: block;
+  height: 400px;
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .swipe {
@@ -147,15 +141,16 @@ a {
 }
 
 .card {
-  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 80vw;
   max-width: 260px;
   height: 300px;
   box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.30);
   border-radius: 20px;
-  background-size: cover;
-  background-position: center;
   user-select: none;
+  contain: strict;
 }
 
 .infoText {
@@ -168,10 +163,33 @@ a {
   animation-duration: 800ms;
 }
 
+.card-details {
+  position: fixed;
+  width: 100%;
+  background-color: #ffffff;
+}
+
 .card h3 {
-  background-color: black;
   position: absolute;
   bottom: 0;
   margin: 10px;
-  color: #fff;
+  color: #000000;
 }
+
+@media screen and (max-width: 900px) {
+  html {
+    max-height: 100%;
+    max-width: 100%;
+    display: flex;
+    background: linear-gradient(90deg, rgba(41, 255, 255, 1) 13%, rgba(70, 138, 241, 1) 100%) no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    justify-content: center;
+  }
+
+  .logo {
+    width: 350px;
+  }
+}
+
+
